<resources>
    <string name="my_portfolio">My Portfolio</string>
    <string name="app_name">Stock Earnings</string>
    <string name="sample_profit_value">0.0</string>
    <string name="profit">Net Profit</string>
    <string name="user_account_button_description">User Account Button</string>
    <string name="menu_button_description">Side Menu Button</string>
    <string name="add_stock_heading"> Enter Stock Details</string>
    <string name="stock_isin_hint"> Enter ISIN number</string>
    <string name="scripCode">Scrip Code</string>
    <string name="quantity">Quantity</string>
    <string name="purhcase_price">Purchase Price</string>
    <string name="quantity_received">Quantity Received</string>
    <string name="add_stock"> Add Stock</string>
    <string name="no_user_stock">Add stocks to see them here</string>
    <string name="refresh_menu_button"> Refresh </string>
    <string name="refresh_menu_button_description"> Refresh to get latest stock prices</string>
    <string name="delete_menu_button"> Delete </string>
    <string name="delete_menu_button_description"> Delete stock added to the list</string>
    <string name="more">More Options</string>
    <string name="BSE_Sensex_Current_Points">BSE : </string>
    <string name="NSECurrent_Points">NSE : </string>
</resources>